Change file upload model to multipart
